Fix table overflow

--- a/main.css
+++ b/main.css
@@ -71,6 +71,7 @@ table {
   border-collapse: collapse;
   max-width: 100%;
   width: 100%;
+  overflow-x: auto;
 }
 
 td,
